src/styles/globals.css
@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';

html {
  @apply bg-violet-50;
}

html.dark {
  background-color: #292929;
  color: #fff;
}

ul li {
  margin-bottom: 0.5rem;
}

ul li:last-child {
  margin-bottom: 0;
}

